<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ex_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="#000">

                    <ImageView
                        android:id="@+id/ex_img"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="#000"
                        android:padding="16dp"
                        android:src="@drawable/ic_experience" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:orientation="vertical"
                        android:paddingLeft="16dp">

                        <TextView
                            android:id="@+id/ex_companyname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:text="@string/Company_Name1"
                            android:textColor="#000"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/ex_designation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/designation1"
                            android:textColor="#000" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/ex_period"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:padding="16dp"
                        android:text="2y"
                        android:textColor="#000" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ex_hiddenlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#000" />

                <TextView
                    android:id="@+id/content_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/w11"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/content_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/w12"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/content_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/w13"
                    android:textColor="#000" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>