<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context="com.example.akshayjindam.menubar.fragments.Experience">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/experience"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_8"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#00C853"
            app:cardCornerRadius="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_8"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_education" />


                    <TextView
                        android:id="@+id/company_name1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal"
                        android:text="@string/Company_Name1"
                        android:textSize="@dimen/textsize_24"
                        android:textStyle="bold" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/designation1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/designation1"
                        android:textSize="@dimen/textsize_16"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/date1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignRight="@+id/designation1"
                        android:text="(6 months)"
                        android:textSize="@dimen/textsize_16"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/more1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/designation1"
                        android:clickable="true"
                        android:gravity="end"
                        android:textSize="@dimen/textsize_16"
                        android:onClick="do"
                        android:text="...more"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />


                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/jj_layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/w11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_8"
                        android:text="@string/w11" />

                    <TextView
                        android:id="@+id/w12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_8"
                        android:text="@string/w12" />

                    <TextView
                        android:id="@+id/w13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_8"
                        android:text="@string/w13" />

                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_16"
            app:cardBackgroundColor="#00C853"
            app:cardCornerRadius="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_8"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_education" />


                    <TextView
                        android:id="@+id/company_name2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal"
                        android:text="@string/Company_Name1"
                        android:textSize="@dimen/textsize_24"
                        android:textStyle="bold" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/designation2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/designation1"
                        android:textSize="@dimen/textsize_16"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/date2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignRight="@+id/designation2"
                        android:text="(6 months)"
                        android:textSize="@dimen/textsize_16"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/more2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/designation2"
                        android:clickable="true"
                        android:gravity="end"
                        android:textSize="@dimen/textsize_16"
                        android:onClick="do"
                        android:text="...more"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />


                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/jj_layout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/w21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_8"
                        android:text="@string/w11" />

                    <TextView
                        android:id="@+id/w22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_8"
                        android:text="@string/w12" />

                    <TextView
                        android:id="@+id/w23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_8"
                        android:text="@string/w13" />

                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_16"
            app:cardBackgroundColor="#00C853"
            app:cardCornerRadius="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_8"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_education" />


                    <TextView
                        android:id="@+id/company_name3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal"
                        android:text="@string/Company_Name1"
                        android:textSize="@dimen/textsize_24"
                        android:textStyle="bold" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/designation3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/designation1"
                        android:textSize="@dimen/textsize_16"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/date3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignRight="@+id/designation3"
                        android:text="(6 months)"
                        android:textSize="@dimen/textsize_16"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/more3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/designation3"
                        android:clickable="true"
                        android:gravity="end"
                        android:onClick="do"
                        android:textSize="@dimen/textsize_16"
                        android:text="...more"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />


                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/jj_layout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/w31"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_8"
                        android:text="@string/w11" />

                    <TextView
                        android:id="@+id/w32"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_8"
                        android:text="@string/w12" />

                    <TextView
                        android:id="@+id/w33"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_8"
                        android:text="@string/w13" />

                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

</ScrollView>
